[package]
name = "overmask"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[profile.small]
inherits = "release"
opt-level = "z"

[dependencies]
block-utils = "0"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
nix = "0"
vblk = "0"
