[package]
name = "overmask"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-only"
build = "build.rs"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[profile.small]
inherits = "release"
opt-level = "z"

[dependencies]
block-utils = "0"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
ctrlc = "3"
nix = "0"
vblk = "0"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
